# simple-mpas

./: build.sh  get.sh
libs/: CMakeLists.txt  build_metis.sh  fetch.sh
run/: configuration.sh  fetch_fix_data.sh  fetch_input_data.sh  run.sh  run_model.sh  run_real.sh  run_regional.sh  run_static.sh  run_ungrib.sh
run/parm/: namelist.atmosphere.IN  namelist.init_atmosphere.IN  namelist.wps.IN  streams.atmosphere.IN  streams.real.init_atmosphere.IN  streams.real_lbc.init_atmosphere.IN  streams.static.init_atmosphere.IN
src/: build.sh  build_model_gsl.sh  build_model_ncar.sh  build_tools.sh  build_ufs.sh  get.sh
src/standalone-ext-esmf/: CMakeLists.txt  build.sh  clone.sh
